--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 <body>
   <div class="container-fluid">
     <div class="row header">
-        <h1>trackster</h1>
-        <input class="col-xs-2" placeholder="Search">
-        <i id="search-button" class="col-xs-1">
+        <h1 class="col-xs-7 col-xs-offset-1">trackster</h1>
+        <input id="search-input" class="col-xs-2" placeholder="Search">
+        <i id="search-button" class="fa fa-search fa-2x col-xs-1">
         </i>
     </div>
    <div class="row info">
         <div>#</div>
-        <div class="col-xs-4 info">Song</div>
+        <div class="col-xs-4 col-xs-offset-2 info">Song</div>
         <div class="col-xs-2 info">Artist</div>
         <div class="col-xs-3 info">Album</div>
         <div class="col-xs-3 info">Popularity</div>
         <div>Length</div>
-       </ul>
+      </div>
      </div>
 </body>
 </html>
