--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         <i id="search-button" class="fa fa-search fa-2x col-xs-1">
         </i>
     </div>
-   <div class="row info">
-        <div>#</div>
-        <div class="col-xs-4 col-xs-offset-2 info">Song</div>
-        <div class="col-xs-2 info">Artist</div>
-        <div class="col-xs-3 info">Album</div>
-        <div class="col-xs-3 info">Popularity</div>
-        <div>Length</div>
+   <div class="row attributes">
+        <div class="col-xs-4 col-xs-offset-2 attribute">Song</div>
+        <div class="col-xs-2 attribute">Artist</div>
+        <div class="col-xs-2 attribute">Album</div>
+        <div class="col-xs-2 attribute">Popularity</div>
       </div>
      </div>
+     <div class="container-fluid" id="track-list">
+</div>
 </body>
 </html>
