--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,
-  initial-scale=1.0">
-  <title>trackster</title>
+
   <link rel="icon" href="favicon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
@@ -12,9 +9,7 @@
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-          integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-          crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="./resources/js/trackster.js"></script>
   <script type="text/javascript" src="./resources/js/tests.js"></script>
 </head>
@@ -22,18 +17,30 @@
   <div class="container-fluid">
     <div class="row header">
         <h1 class="col-xs-7 col-xs-offset-1">trackster</h1>
-        <input id="search-input" class="col-xs-2" placeholder="Search">
-        <i id="search-button" class="fa fa-search fa-2x col-xs-1">
+        <input class="col-xs-2" id="search-input" placeholder="Search">
+        <i class="fa fa-search fa-2x col-xs-1" id="search-button">
         </i>
     </div>
    <div class="row attributes">
-        <div class="col-xs-4 col-xs-offset-2 attribute">Song</div>
+        <div class="col-xs-4 col-xs-offset-2 attribute"># Song</div>
         <div class="col-xs-2 attribute">Artist</div>
         <div class="col-xs-2 attribute">Album</div>
-        <div class="col-xs-2 attribute">Popularity</div>
+        <div class="col-xs-1 attribute">Popularity</div>
       </div>
-     </div>
-     <div class="container-fluid" id="track-list">
-</div>
+  </div>
+     <div class="container-fluid" id="search-results">
+       <div class="row track">
+        <div class="col-xs-1 col-xs-offset-1 play-button">
+          <a href="https://youtu.be/eI_O5_tJ1hA" target="_blank">
+           <i class="fa fa-play-circle-o fa-2x">
+           </i>
+          </a>
+         </div>
+        <div class="col-xs-4">23. United</div>
+        <div class="col-xs-2">Throbbing Gristle</div>
+        <div class="col-xs-2">Greatest Hits</div>
+        <div class="col-xs-2">23</div>
+    </div>
+  </div>
 </body>
 </html>
