--- a/index.html
+++ b/index.html
@@ -28,19 +28,7 @@
         <div class="col-xs-1 attribute">Popularity</div>
       </div>
   </div>
-     <div class="container-fluid" id="search-results">
-       <div class="row track">
-        <div class="col-xs-1 col-xs-offset-1 play-button">
-          <a href="https://youtu.be/eI_O5_tJ1hA" target="_blank">
-           <i class="fa fa-play-circle-o fa-2x">
-           </i>
-          </a>
-         </div>
-        <div class="col-xs-4">23. United</div>
-        <div class="col-xs-2">Throbbing Gristle</div>
-        <div class="col-xs-2">Greatest Hits</div>
-        <div class="col-xs-2">23</div>
-    </div>
+     <div class="container-fluid" id="track-list">
   </div>
 </body>
 </html>
